Add option to show network speed in KB/s or KBits/s in interface details widget.

BUG: 246327
FIXED-IN: nm09 branch